Toggling "Use new views" doesn't update current view.
Steps to reproduce:
- Have a Files window open in icon view.
- Open the "Files" application menu, then click Preferences.
- Toggle the "Use new views" checkbox.
- Close Preferences.
Expected result:
The current icon view has changed.
Actual result:
The current icon view has not changed. One must switch to list view and back to icon view for the icon view to change.