general: Make new views preference update view

The use new views preference checkbox does not update the view.
In order for it to take effect, one needs to toggle view.

This behaviour is not intended, and this should work same as
for other checkbox preferences.

We fixed this by introducing a new viewer ID, underlining the
difference between canvas view and icon controller view.

Closes https://gitlab.gnome.org/GNOME/nautilus/issues/278